difficulty update (non-functonal)

--- a/move.html
+++ b/move.html
@@ -12,7 +12,7 @@
     <script type="text/javascript" src="poeng.js"></script>
     <script>
         start();
-        var epleinterval = setInterval(epleflytt,5000);
+        setInterval(epleflytt,5000);
     </script>
 </body>
 </html>
