new file structure
added clouds and changed file structure

--- a/move.html
+++ b/move.html
@@ -4,8 +4,8 @@
     <link rel="stylesheet" type="text/css" href="move.css">
 </head>
 <body onkeydown="testmove(event)">
-    <img id="fly" src="fly2.png" width="122" height="80">
-    <img id="eple" src="eple.png">
+    <img id="fly" src="./assets/images/dynamic_obj/fly2.png" width="122" height="80">
+    <img id="eple" src="./assets/images/dynamic_obj/eple.png">
     <div id="poengvisning">0</div>
     <script type="text/javascript" src="move.js"></script>
     <script type="text/javascript" src="epleautonom.js"></script>
