Added cloud animation

--- a/move.html
+++ b/move.html
@@ -14,5 +14,11 @@
         start();
         setInterval(epleflytt,5000);
     </script>
+
+    <img class="cloud" id="c1" src="./assets/images/static/clouds/c1.png">
+    <img class="cloud" id="c2" src="./assets/images/static/clouds/c2.png">
+    <img class="cloud" id="c3" src="./assets/images/static/clouds/c3.png">
+    <img class="cloud" id="c4" src="./assets/images/static/clouds/c4.png">
+
 </body>
 </html>
